--- a/text/best_chain.tex
+++ b/text/best_chain.tex
@@ -16,7 +16,7 @@ We define the latest finalized block as $\block^\final$. All associated terms co
 Formally:
 \begin{align}
   \ancestors(\header^\best) &\owns \header^\final \\
-  \mathbf{U}^\best &\equiv \top \\
+  \isaudited^\best &\equiv \top \\
   \not\exists \header^A, \header^B &: \bigwedge \abracegroup[\,]{
     \header^A &\ne \header^B \\
     \header^A_\¬timeslot &= \header^B_\¬timeslot \\
