--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -81,6 +81,9 @@ The judgments of all verdicts must be ordered by validator index and there may b
   \forall \tup{\xv¬reporthash, \xv¬epochindex, \xv¬judgments} \in \xtverdicts : \xv¬judgments = \orderuniqby{\xvj¬judgeindex}{\tup{\xvj¬validity, \xvj¬judgeindex, \xvj¬signature} \in \xv¬judgments}
 \end{equation}
 
+\newcommand*{\verdicts}{\mathbf{v}}
+\newcommand*{\vs¬reporthash}{\¬reporthash}
+\newcommand*{\vs¬approval}{t}
 
 We define $\verdicts$ to derive from the sequence of verdicts introduced in the block's extrinsic, containing only the report hash and the sum of positive judgments. We require this total to be either exactly two-thirds-plus-one, zero or one-third of the validator set indicating, respectively, that the report is good, that it's bad, or that it's wonky.\footnote{This requirement may seem somewhat arbitrary, but these happen to be the decision thresholds for our three possible actions and are acceptable since the security assumptions include the requirement that at least two-thirds-plus-one validators are live (\cite{cryptoeprint:2024/961} discusses the security implications in depth).} Formally:
 \begin{align}\label{eq:verdicts}
@@ -98,9 +101,6 @@ We define $\verdicts$ to derive from the sequence of verdicts introduced in the 
       \tup{\xv¬reporthash, \xv¬epochindex, \xv¬judgments} \orderedin \xtverdicts
     }}
 \end{align}
-
-\newcommand*{\vs¬reporthash}{\¬reporthash}
-\newcommand*{\vs¬approval}{t}
 
 There are some constraints placed on the composition of this extrinsic: any verdict containing solely valid judgments implies the same report having at least one valid entry in the faults sequence $\xtfaults$. Any verdict containing solely invalid judgments implies the same report having at least two valid entries in the culprits sequence $\xtculprits$. Formally:
 \begin{align}
