--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -147,7 +147,7 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
   \se_D((\mathbf{v}, \mathbf{c}, \mathbf{f})) &= \se(\var{[(r, \se_4(a), [(v, \se_2(i), s) \mid (v, i, s) \orderedin \mathbf{j}]) \mid (r, a, \mathbf{j}) \orderedin \mathbf{v}]}, \var{\mathbf{c}}, \var{\mathbf{f}}) \\
   \se(\mathbf{H}) &= \se_U(\mathbf{H})\concat\se(\H_\¬sealsig) \\
   \se_U(\mathbf{H}) &= \se(\H_\¬parent,\H_\¬priorstateroot,\H_\¬extrinsichash)\concat\se_4(\H_\¬timeslot)\concat\se(\maybe{\H_\¬epochmark},\maybe{\H_\¬winnersmark},\se_2(\H_\¬authorindex),\H_\¬vrfsig,\var{\H_\¬offendersmark})\\
-  \se(x \in \mathbb{X}) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\var{x_\mathbf{p}})\\
+  \se(x \in \workcontext) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\var{x_\mathbf{p}})\\
   \se(x \in \avspec) &\equiv \se(x_h) \concat \se_4(x_l)\concat\se(x_u, x_e) \concat \se_2(x_n) \\
   \se(x \in \mathbb{L}) &\equiv \se(\se_4(x_s), x_c, x_y, \se_8(x_g), x_u, x_i, x_x, x_z, x_e, \seresult(x_\wl¬result))\\
   \se(x \in \workreport) &\equiv \se(x_s, x_x, x_c, x_a, x_g, \var{x_\wr¬authtrace}, \var{x_\mathbf{l}}, \var{x_\wr¬digests}) \\
