--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -68,7 +68,7 @@ We begin by defining a \emph{work-package}, of set $\workpackage$, and its const
     \isa{\wp¬authcodehost}{\serviceid},\ 
     \isa{\wp¬authcodehash}{\hash},\ 
     \isa{\wp¬authconfig}{\blob},\ 
-    \isa{\wp¬context}{\mathbb{X}},\ 
+    \isa{\wp¬context}{\workcontext},\ 
     \isa{\wp¬workitems}{\seq{\workitem}_{1:\mathsf{I}}}
   }
 \end{equation}
