--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -95,7 +95,7 @@ The preimage lookup for some service of index $s$ is denoted $\accounts\subb{s}_
 
 The state of the lookup system naturally satisfies a number of invariants. Firstly, any preimage value must correspond to its hash, equation \ref{eq:preimageconstraints}. Secondly, a preimage value being in state implies that its hash and length pair has some associated status, also in equation \ref{eq:preimageconstraints}. Formally:
 \begin{equation}\label{eq:preimageconstraints}
-  \forall \mathbf{a} \in \serviceaccount, (h \mapsto \mathbf{d}) \in \mathbf{a}_\sa¬preimages \Rightarrow
+  \forall \mathbf{a} \in \serviceaccount, \kv{h}{\mathbf{d}} \in \mathbf{a}_\sa¬preimages \Rightarrow
     h = \blake(\mathbf{d})\wedge
     \tup{h , \len{\mathbf{d}}} \in \Fkeys{\mathbf{a}_\sa¬requests}
 \end{equation}
@@ -113,9 +113,9 @@ The historical status component $h \in \seq{\timeslot}_{:3}$ is a sequence of up
 The historical lookup function $\histlookup$ may now be defined as:
 \begin{equation}
   \begin{aligned}\label{eq:historicallookup}
-    &\histlookup\colon (\serviceaccount, \timeslot, \hash) \to \optional{\blob} \\
+    &\histlookup\colon \tuple{\serviceaccount, \timeslot, \hash} \to \optional{\blob} \\
     &\histlookup(\mathbf{a}, t, h) \equiv \begin{cases}
-      \mathbf{a}_\sa¬preimages\subb{h}\!\!\!\! &\when h \in \Fkeys{\mathbf{a}_\sa¬preimages} \wedge I(\mathbf{a}_\sa¬requests\subb{h, \len{\mathbf{a}_\sa¬preimages[h]}}, t) \!\!\!\!\! \\
+      \mathbf{a}_\sa¬preimages\subb{h}\!\!\!\! &\when h \in \Fkeys{\mathbf{a}_\sa¬preimages} \wedge I(\mathbf{a}_\sa¬requests\subb{h, \len{\mathbf{a}_\sa¬preimages\subb{h}}}, t) \!\!\!\!\! \\
       \none &\otherwise
     \end{cases}\\
     &\where I(\mathbf{l}, t) = \begin{cases}
@@ -145,8 +145,8 @@ We may then define a third dependent term $\sa¬minbalance$, the minimum, or \em
     \mathbf{a}_\sa¬items \in \Nbits{32} &\equiv
       2\cdot\len{\,\mathbf{a}_\sa¬requests\,} + \len{\,\mathbf{a}_\sa¬storage\,} \\
     \mathbf{a}_\sa¬octets \in \Nbits{64} &\equiv
-      \sum\limits_{\,(h, z) \in \Fkeys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
-    &\phantom{\equiv\ } + \sum\limits_{(x, y) \in \mathbf{a}_\sa¬storage} 34 + \len{y} + \len{x} \\
+      \sum\limits_{\,\tup{h, z} \in \Fkeys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
+    &\phantom{\equiv\ } + \sum\limits_{\tup{x, y} \in \mathbf{a}_\sa¬storage} 34 + \len{y} + \len{x} \\
     \mathbf{a}_\sa¬minbalance \in \balance &\equiv
       \max(0,
         \mathsf{B}_S
