--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -4,10 +4,13 @@
 \newcommand*{\gasused}{U}
 \newcommand*{\fnprovide}{P}
 \newcommand*{\accumulatedcup}{\overbrace{\accumulated}}
+\newcommand*{\deferredtransfers}{\mathbf{t}}
+\newcommand*{\numberofitemsaccumulated}{n}
+\newcommand*{\servicegasused}{\mathbf{u}}
 
 \section{Accumulation}\label{sec:accumulation}
 
-Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\authqueue'$ and $\privileges'$.
+Accumulation may be defined as some function whose arguments are $\justbecameavailable$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\authqueue'$ and $\privileges'$.
 
 The proposition of accumulation is in fact quite simple: we merely wish to execute the \emph{Accumulate} logic of the service code of each of the services which has at least one work-digest, passing to it relevant data from said digests together with useful contextual information. However, there are three main complications. Firstly, we must define the execution environment of this logic and in particular the host functions available to it. Secondly, we must define the amount of gas to be allowed for each service's execution. Finally, we must determine the nature of transfers within Accumulate which, as we will see, leads to the need for a second entry-point, \emph{on-transfer}.
 
@@ -30,12 +33,12 @@ We also maintain knowledge of ready (\ie available and/or audited) but not-yet-a
   \ready &\in \seq{\seq{\tuple{\workreport, \protoset{\hash}}}}_\epochlen
 \end{align}
 
-The newly available work-reports, $\mathbf{W}$, are partitioned into two sequences based on the condition of having zero prerequisite work-reports. Those meeting the condition, $\mathbf{W}^!$, are accumulated immediately. Those not, $\mathbf{W}^Q$, are for queued execution. Formally:
+The newly available work-reports, $\justbecameavailable$, are partitioned into two sequences based on the condition of having zero prerequisite work-reports. Those meeting the condition, $\justbecameavailable^!$, are accumulated immediately. Those not, $\justbecameavailable^Q$, are for queued execution. Formally:
 \begin{align}
-  \mathbf{W}^! &\equiv [ w \mid w \orderedin \mathbf{W}, |(w_\wr¬context)_\cx¬prerequisites| = 0 \wedge w_\wr¬srlookup = \emset ] \\
-  \mathbf{W}^Q &\equiv E(\sq{
+  \justbecameavailable^! &\equiv [ w \mid w \orderedin \justbecameavailable, |(w_\wr¬context)_\cx¬prerequisites| = 0 \wedge w_\wr¬srlookup = \emset ] \\
+  \justbecameavailable^Q &\equiv E(\sq{
     D(w) \mid
-    w \orderedin \mathbf{W},
+    w \orderedin \justbecameavailable,
     |(w_\wr¬context)_\cx¬prerequisites| > 0 \vee w_\wr¬srlookup \ne \emset
   }, \accumulatedcup)\!\!\!\!\\
   D(w) &\equiv (w, \set{(w_\wr¬context)_\cx¬prerequisites} \cup \Fkeys{w_\wr¬srlookup})
@@ -45,7 +48,7 @@ We define the queue-editing function $E$, which is essentially a mutator functio
 \begin{equation}
   E\colon\abracegroup{
       &(\seq{\tuple{\workreport, \protoset{\hash}}}, \protoset{\hash}) \to \seq{\tuple{\workreport, \protoset{\hash}}} \\
-    &(\mathbf{r}, \mathbf{x}) \mapsto \sq{\build{
+    &\tup{\mathbf{r}, \mathbf{x}} \mapsto \sq{\build{
       \tup{w, \mathbf{d} \setminus \mathbf{x}}
     }{
       \begin{aligned}
@@ -76,16 +79,16 @@ Finally, we define the mapping function $\srmap$ which extracts the correspondin
   }
 \end{equation}
 
-We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
+We may now define the sequence of accumulatable work-reports in this block as $\justbecameavailable^*$:
 \begin{align}
   \using m &= \H_\¬timeslot \bmod \epochlen\\
-  \mathbf{W}^* &\equiv \mathbf{W}^! \concat Q(\mathbf{q}) \\
-  \quad\where \mathbf{q} &= E(\concatall{\ready_{m\dots}} \concat \concatall{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
+  \justbecameavailable^* &\equiv \justbecameavailable^! \concat Q(\mathbf{q}) \\
+  \quad\where \mathbf{q} &= E(\concatall{\ready_{m\dots}} \concat \concatall{\ready_{\dots m}} \concat \justbecameavailable^Q, \srmap(\justbecameavailable^!))
 \end{align}
 
 \subsection{Execution}
 
-We work with a limited amount of gas per block and therefore may not be able to process all items in $\mathbf{W}^*$ in a single block. There are two slightly antagonistic factors allowing us to optimize the amount of work-items, and thus work-reports, accumulated in a single block:
+We work with a limited amount of gas per block and therefore may not be able to process all items in $\justbecameavailable^*$ in a single block. There are two slightly antagonistic factors allowing us to optimize the amount of work-items, and thus work-reports, accumulated in a single block:
 
 Firstly, while we have a well-known gas-limit for each work-item to be accumulated, accumulation may still result in a lower amount of gas used. Only after a work-item is accumulated can it be known if it uses less gas than the advertised limit. This implies a sequential execution pattern.
 
@@ -129,34 +132,34 @@ Finally, we denote the set of service/hash pairs, utilized as a service-indexed 
 We define the outer accumulation function $\accseq$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
   \accseq\colon\abracegroup{
-    &(\gas, \seq{\workreport}, \partialstate, \dict{\serviceid}{\gas}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
+    &\tuple{\gas, \seq{\workreport}, \partialstate, \dict{\serviceid}{\gas}} \to \tuple{\N, \partialstate, \defxfers, \servouts, \gasused} \\
     &(g, \mathbf{w}, \mathbf{o}, \mathbf{f}) \!\mapsto\! \begin{cases}
-      (0, \mathbf{o}, [], \emset, []) &
+      (0, \mathbf{o}, \sq{}, \emset, \sq{}) &
         \when i = 0 \\
       (i + j, \mathbf{o}', \mathbf{t}^* \!\!\concat \mathbf{t}, \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u})\!\!\!\! &
         \text{o/w}\!\!\!\!\!\!\!\! \\
     \end{cases} \\
-    &\quad\where i = \max(\N_{\len{\mathbf{w}} + 1}): \sum_{w \in \mathbf{w}_{\dots i}}\sum_{r \in w_\mathbf{r}}(r_g) \le g \\
-    &\quad\also (\mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*) = \accpar(\mathbf{o}, \mathbf{w}_{\dots i}, \mathbf{f}) \\
-    &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}) = \accseq(g - \!\!\!\!\sum_{(s, u) \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}_{i\dots}, \mathbf{o}^*, \emset)
+    &\quad\where i = \max(\N_{\len{\mathbf{w}} + 1}): \sum_{w \in \mathbf{w}\sub{\dots i}}\sum_{r \in w_\wr¬digests}(r_\wl¬gaslimit) \le g \\
+    &\quad\also (\mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*) = \accpar(\mathbf{o}, \mathbf{w}\sub{\dots i}, \mathbf{f}) \\
+    &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}) = \accseq(g - \!\!\!\!\sum_{\tup{s, u} \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}\sub{i\dots}, \mathbf{o}^*, \emset)
   }
 \end{equation}
 
-\newcommand*{\¬accounts}{\ps¬accounts}
-\newcommand*{\¬stagingset}{\ps¬stagingset}
-\newcommand*{\¬authqueue}{\ps¬authqueue}
-\newcommand*{\¬manager}{\ps¬manager}
-\newcommand*{\¬assigners}{\ps¬assigners}
-\newcommand*{\¬delegator}{\ps¬delegator}
-\newcommand*{\¬alwaysaccers}{\ps¬alwaysaccers}
+\newcommand*{\local¬accounts}{\mathbf{d}}
+\newcommand*{\local¬stagingset}{\mathbf{i}}
+\newcommand*{\local¬authqueue}{\mathbf{q}}
+\newcommand*{\local¬manager}{m}
+\newcommand*{\local¬assigners}{\mathbf{a}}
+\newcommand*{\local¬delegator}{v}
+\newcommand*{\local¬alwaysaccers}{\mathbf{z}}
 
-We come to define the parallelized accumulation function $\accpar$ which, with the help of the single-service accumulation function $\accone$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{x}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\concatall{\mathbf{t}}$:
+We come to define the parallelized accumulation function $\accpar$ which, with the help of the single-service accumulation function $\accone$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution, a posterior state-context and the resultant accumulation-output pairings and deferred-transfers:
 \begin{equation}
   \accpar\colon\abracegroup[\;]{\begin{aligned}
     &\tuple{\partialstate, \seq{\workreport}, \dict{\serviceid}{\gas}} \to \tuple{\partialstate, \defxfers, \servouts, \gasused} \\
     &\tup{\mathbf{o}, \mathbf{w}, \mathbf{f}} \mapsto \tup{
       \tup{
-        \¬accounts', \¬stagingset', \¬authqueue', \¬manager', \¬assigners', \¬delegator', \¬alwaysaccers'
+        \local¬accounts', \local¬stagingset', \local¬authqueue', \local¬manager', \local¬assigners', \local¬delegator', \local¬alwaysaccers'
       }, \concatall{\mathbf{t}}, \mathbf{b}, \mathbf{u}
     }\!\!\!\!\!\!\\
     &\text{where:}\\
@@ -175,7 +178,7 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
           \tup{s, b}
         }{
           s \in \mathbf{s},\,
-          b = \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬accout,\,
+          b = \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬account,\,
           b \ne \none
         }} \\
       \mathbf{t} &= \sq{\build{
@@ -183,27 +186,27 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
         }{
           s \orderedin \mathbf{s}
         }} \\
-      \¬accounts' &= \fnprovide(
+      \local¬accounts' &= \fnprovide(
         (\ps¬accounts \cup \mathbf{n}) \setminus \mathbf{m},
         \bigcup_{s \in \mathbf{s}} \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬provisions
       ) \\
       &\tup{\ps¬accounts, \ps¬stagingset, \ps¬authqueue, \ps¬manager, \ps¬alwaysaccers} = \mathbf{o} \\
-      \tup{\¬manager', \¬assigners^*, \¬delegator^*, \¬alwaysaccers'} &=
+      \tup{\local¬manager', \local¬assigners^*, \local¬delegator^*, \local¬alwaysaccers'} &=
         (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, m)_\ao¬poststate)_{
           \tup{\ps¬manager, \ps¬assigners, \ps¬delegator, \ps¬alwaysaccers}
         } \\
       \forall c \in \coreindex :
-        \¬assigners'\sub{c} &= ((
-          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \¬assigners^*\sub{c})_\ao¬poststate
+        \local¬assigners'\sub{c} &= ((
+          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \local¬assigners^*\sub{c})_\ao¬poststate
         )_\ps¬assigners)\sub{c} \\
-      \¬delegator' &= (
-          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \¬delegator^*)_\ao¬poststate
+      \local¬delegator' &= (
+          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \local¬delegator^*)_\ao¬poststate
         )_\ps¬delegator \\
-      \¬stagingset' &= (
+      \local¬stagingset' &= (
           \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \ps¬delegator)_\ao¬poststate
       )_\ps¬stagingset \\
       \forall c \in \coreindex :
-        \¬authqueue'\sub{c} &= (
+        \local¬authqueue'\sub{c} &= (
           \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \ps¬assigners\sub{c})_\ao¬poststate
         )_\ps¬authqueue \\
       \mathbf{n} &= \bigcup_{s \in \mathbf{s}}( \set{
@@ -227,18 +230,9 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
     &(\mathbf{d}, \mathbf{p}) \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
       s \in \Fkeys{\mathbf{d}},\;
-      \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}:\\
-    &\qquad \mathbf{d}'[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = [\thetime']\\
-    &\qquad \mathbf{d}'[s]_\mathbf{p}[\blake(\mathbf{i})] = \mathbf{i}
-    %\begin{aligned}
-    %  \tup{s, \mathbf{i}} \in \mathbf{p} \wedge
-    %  s \in \Fkeys{\mathbf{d}}\;\wedge& \\
-    %  \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}&
-    %\end{aligned} &\Rightarrow
-    %\begin{aligned}
-    %  &\mathbf{d}'[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \thetime' \wedge \\
-    %  &\mathbf{d}'[s]_\mathbf{p}[\blake{\mathbf{i}}] = \mathbf{i}
-    %\end{aligned} \\
+      \mathbf{d}\subb{s}_\sa¬requests\subb{\blake(\mathbf{i}), \len{\mathbf{i}}} = \sq{}:\\
+    &\qquad \mathbf{d}'\subb{s}_\sa¬requests\subb{\blake(\mathbf{i}), \len{\mathbf{i}}} = [\thetime']\\
+    &\qquad \mathbf{d}'\subb{s}_\sa¬preimages\subb{\blake(\mathbf{i})} = \mathbf{i}
   }
 \end{equation}
 
@@ -267,7 +261,7 @@ The single-service accumulation function, $\accone$, transforms an initial state
         \begin{alignedat}{3}
           \isa{\ao¬poststate&}{\partialstate}\,,\;
           \isa{&\ao¬defxfers&}{\defxfers}\,,\;
-          \isa{\ao¬accout}{\optional{\hash}}\,,\\
+          \isa{\ao¬account}{\optional{\hash}}\,,\\
           \isa{\ao¬gasused&}{\gas}\,,\;
           \isa{&\ao¬provisions&}{\protoset{\tuple{\serviceid, \blob}}}
         \end{alignedat}
@@ -306,62 +300,93 @@ This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used
 
 Given the result of the top-level $\accseq$, we may define the posterior state $\privileges'$, $\authqueue'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
-  \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \corecount + \textstyle \sum_{x \in \Fvalues{\alwaysaccers}}(x)\right)\\
-  \also &\mathbf{o} = (\accountspre, \stagingset, \authqueue, \manager, \assigners, \delegator, \alwaysaccers) \\
-  &(n, \mathbf{o}', \mathbf{t}, \lastaccout', \mathbf{u}) \equiv
-    \accseq(g, \mathbf{W}^*, \mathbf{o}, \alwaysaccers) \\
-  &(\accountspostacc, \stagingset', \authqueue', \manager', \assigners', \delegator', \alwaysaccers') \equiv \mathbf{o}'
+  \using &g = \max\left(
+    \mathsf{G}_T,
+    \mathsf{G}_A \cdot \corecount + \textstyle \sum_{x \in \Fvalues{\alwaysaccers}}(x)
+  \right)\\
+  \also &\mathbf{o} = \tup{
+    \accountspre, \stagingset, \authqueue, \manager, \assigners, \delegator, \alwaysaccers
+  } \\
+  &\tup{
+    \numberofitemsaccumulated, \mathbf{o}', \deferredtransfers, \lastaccout', \servicegasused
+  } \equiv \accseq(g, \justbecameavailable^*, \mathbf{o}, \alwaysaccers) \\
+  &\tup{
+    \accountspostacc, \stagingset', \authqueue', \manager', \assigners', \delegator', \alwaysaccers'
+  } \equiv \mathbf{o}'
 \end{align}
 
-From this formulation, we also receive $\mathbf{t}$, the grand sequence of deferred transfers, together with $n$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
+From this formulation, we also receive $\deferredtransfers$, the grand sequence of deferred transfers, together with $\numberofitemsaccumulated$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
 
-We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
+We compose $\accumulationstatistics$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
-  &\mathbf{I} \in \dict{\serviceid}{\tuple{\gas, \N}} \\
-  &\textstyle \mathbf{I} \equiv \set{ s \mapsto \tup{\sum_{(s, u) \in \mathbf{u}}(u), \len{N(s)}} \;\middle\mid\; N(s) \ne [] } \\
-  \where &N(s) \equiv \sq{r \mid w \orderedin \mathbf{W}^*_{\dots n} , r \orderedin w_\mathbf{r} , r_s = s }
+  &\accumulationstatistics \in \dict{\serviceid}{\tuple{\gas, \N}} \\
+  &\textstyle \accumulationstatistics \equiv \set{\build{
+    \kv{s}{
+      \tup{\sum_{\tup{s, u} \in \mathbf{u}}(u), \len{N(s)}}
+    }
+  }{
+    N(s) \ne \sq{}
+  }} \\
+  \where &N(s) \equiv \sq{\build{r}{
+    w \orderedin \justbecameavailable^*\sub{\dots n} ,
+    r \orderedin w_\wr¬digests ,
+    r_\wl¬service = s
+  }}
 \end{align}
 
 \newcommand*{\selectxfers}{X}
 
-We have denoted the sequence of implied transfers as $\mathbf{t}$, ordered internally according to the source service's execution. We define a selection function $\selectxfers$, which maps a desired destination service index into the sequence of transfers from $\mathbf{t}$ which target said service. It is ordered primarily according to the source service index and secondarily their order within $\mathbf{t}$. Formally:
+We have denoted the sequence of implied transfers as $\deferredtransfers$, ordered internally according to the source service's execution. We define a selection function $\selectxfers$, which maps a desired destination service index into the sequence of transfers from those implied which target said service. It is ordered primarily according to the source service index and secondarily their order within $\deferredtransfers$. Formally:
 \begin{equation}
   \selectxfers\colon \abracegroup[\;]{
     \serviceid &\to \defxfers \\
-    d &\mapsto \sq{\,t \mid s \orderedin \serviceid,\ t \orderedin \mathbf{t},\ t_s = s,\ t_d = d\,}
+    d &\mapsto \sq{\build{t}{
+      s \orderedin \serviceid,\ 
+      t \orderedin \deferredtransfers,\ 
+      t_\dx¬source = s,\ 
+      t_\dx¬dest = d
+    }}
   }\!\!\!\!
 \end{equation}
 
+\newcommand*{\deferredeffects}{\mathbf{x}}
 The second intermediate state $\accountspostxfer$ may then be defined with all the deferred effects of the transfers applied followed by the last-accumulation record being updated for all accumulated services:
 \begin{align}
-  \mathbf{x} &= \set{ s \mapsto \Psi_T(\accountspostacc, \thetime', s, \selectxfers(s)) \mid (s \mapsto a) \in \accountspostacc } \\
-  \accountspostxfer &\equiv \set{ s \mapsto a' \;\middle\mid\; (s \mapsto \tup{a, u}) \in \mathbf{x} } \\
+  \deferredeffects &= \set{\build{
+    \kv{s}{\Psi_T(\accountspostacc, \thetime', s, \selectxfers(s))}
+  }{
+    \kv{s}{a} \in \accountspostacc
+  }} \\
+  \accountspostxfer &\equiv \set{ \build{ \kv{s}{a'} }{ \kv{s}{\tup{a, u}} \in \deferredeffects }} \\
   &\where a' = \begin{cases}
-    a \exc a'_a = \thetime' &\when s \in \Fkeys{\mathbf{I}} \\
+    a \exc a'_\sa¬lastacc = \thetime' &\when s \in \Fkeys{\accumulationstatistics} \\
     a &\otherwise
   \end{cases}
 \end{align}
 
-Furthermore we build the deferred transfers statistics value $\mathbf{X}$ as the number of transfers and the total gas used in transfer processing for each \emph{destination} service index. Formally:
+
+Furthermore we build the deferred transfers statistics value $\deferredtransfersstatistics$ as the number of transfers and the total gas used in transfer processing for each \emph{destination} service index. Formally:
 \begin{align}
   \label{eq:deferredtransfers}
-  &\mathbf{X} \in \dict{\serviceid}{\tuple{\N, \gas}} \\
-  &\textstyle \mathbf{X} \equiv \set{ d \mapsto \tup{\len{\selectxfers(d)}, u} \;\middle\vert\; \begin{aligned}
-    \selectxfers(d) &\ne [],\\ \exists a: \mathbf{x}[d] &= (a, u)
-  \end{aligned}
-  }
+  &\deferredtransfersstatistics \in \dict{\serviceid}{\tuple{\N, \gas}} \\
+  &\textstyle \deferredtransfersstatistics \equiv \set{ \build { \kv{d}{\tup{\len{\selectxfers(d)}, u}} }{
+    \begin{aligned}
+      \selectxfers(d) &\ne \sq{},\\
+      \exists a: \deferredeffects\subb{d} &= \tup{a, u}
+    \end{aligned}
+  }}
 \end{align}
 
-Note that $\Psi_T$ is defined in appendix \ref{sec:ontransferinvocation} such that it results in $\accountspostacc[d]$, \ie no difference to the account's intermediate state, if $\selectxfers(d) = []$, \ie said account received no transfers.
+Note that $\Psi_T$ is defined in appendix \ref{sec:ontransferinvocation} such that it results in $\accountspostacc\subb{d}$, \ie no difference to the account's intermediate state, if $\selectxfers(d) = \sq{}$, \ie said account received no transfers.
 
 We define the final state of the ready queue and the accumulated map by integrating those work-reports which were accumulated in this block and shifting any from the prior state with the oldest such items being dropped entirely:
 \begin{align}
-  \accumulated'_{\epochlen - 1} &= \srmap(\mathbf{W}^*_{\dots n}) \\
-  \forall i \in \N_\mathsf{E - 1}: \accumulated'_{i} &\equiv \accumulated_{i + 1} \\
-  \forall i \in \N_\epochlen : \cyclic{\ready'}_{m - i} &\equiv \begin{cases}
-    E(\mathbf{W}^Q, \accumulated'_{\epochlen - 1}) &\when i = 0 \\
-    [] &\when 1 \le i < \thetime' - \thetime \\
-    E(\cyclic{\ready}_{m - i}, \accumulated'_{\epochlen - 1}) &\when i \ge \thetime' - \thetime
+  \accumulated'_{\epochlen - 1} &= \srmap(\justbecameavailable^*\sub{\dots n}) \\
+  \forall i \in \N_{\epochlen - 1}: \accumulated'\sub{i} &\equiv \accumulated\sub{i + 1} \\
+  \forall i \in \N_\epochlen : \cyclic{\ready'}\sub{m - i} &\equiv \begin{cases}
+    E(\justbecameavailable^Q, \accumulated'\sub{\epochlen - 1}) &\when i = 0 \\
+    \sq{} &\when 1 \le i < \thetime' - \thetime \\
+    E(\cyclic{\ready}\sub{m - i}, \accumulated'\sub{\epochlen - 1}) &\when i \ge \thetime' - \thetime
   \end{cases}
 \end{align}
 
@@ -379,20 +404,20 @@ After accumulation, we must integrate all preimages provided in the lookup extri
   \xtpreimages &\in \seq{\tuple{ \serviceid,\, \blob }} \\
   \label{eq:preimagesareordered}\xtpreimages &= \orderuniqby{i}{i \in \xtpreimages} \\
   Y(\mathbf{d}, s, h, l) &\Leftrightarrow
-  h \not\in \mathbf{d}[s]_\mathbf{p} \wedge
-    \mathbf{d}[s]_\mathbf{l}[\tup{h, l}] = []\\
+  h \not\in \mathbf{d}\subb{s}_\sa¬preimages \wedge
+    \mathbf{d}\subb{s}_\sa¬requests\subb{\tup{h, l}} = \sq{}\\
   \forall \tup{s, \mathbf{p}} &\in \xtpreimages : Y(\accountspre, s, \blake(\mathbf{p}), \len{\mathbf{p}})
 \end{align}
 
 We disregard, without prejudice, any preimages which due to the effects of accumulation are no longer useful. We define $\accountspostpreimage$ as the state after the integration of the still-relevant preimages:
 \begin{align}
   \using \mathbf{P} = \set{\build{
-    (s, \mathbf{p})
+    \tup{s, \mathbf{p}}
   }{
-      \tup{s, \mathbf{p}} \in \xtpreimages, Y(\accountspostxfer, s, \blake(\mathbf{p}), \len{\mathbf{p}})
+    \tup{s, \mathbf{p}} \in \xtpreimages, Y(\accountspostxfer, s, \blake(\mathbf{p}), \len{\mathbf{p}})
   }}\\
   \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{s,\,\mathbf{p}} \in \mathbf{P} : \abracegroup[\,]{
-      \quad\accountspostpreimage[s]_\mathbf{p}[\blake(\mathbf{p})] &= \mathbf{p} \\
-      \accountspostpreimage[s]_\mathbf{l}[\blake(\mathbf{p}), \len{\mathbf{p}}] &= [\thetime']
+      \quad\accountspostpreimage\subb{s}_\sa¬preimages\subb{\blake(\mathbf{p})} &= \mathbf{p} \\
+      \accountspostpreimage\subb{s}_\sa¬requests\subb{\blake(\mathbf{p}), \len{\mathbf{p}}} &= \sq{\thetime'}
     }\!\!\!\!
 \end{align}
