--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -29,7 +29,7 @@ A work-report, of the set $\workreport$, is defined as a tuple of the work-packa
 \workreport \equiv \tuple{
   \begin{aligned}
     &\isa{\wr¬avspec}{\avspec},\ 
-    \isa{\wr¬context}{\mathbb{X}},\ 
+    \isa{\wr¬context}{\workcontext},\ 
     \isa{\wr¬core}{\coreindex},\ 
     \isa{\wr¬authorizer}{\hash},\ 
     \isa{\wr¬authtrace}{\blob},\\
@@ -42,23 +42,14 @@ A work-report, of the set $\workreport$, is defined as a tuple of the work-packa
 
 We limit the sum of the number of items in the segment-root lookup dictionary and the number of prerequisites to $\mathsf{J} = 8$:
 \begin{equation}
-  \forall w \in \workreport : \len{w_\wr¬srlookup} + \len{(w_\wr¬context)_\mathbf{p}} \le \mathsf{J}
+  \forall w \in \workreport : \len{w_\wr¬srlookup} + \len{(w_\wr¬context)_\cx¬prerequisites} \le \mathsf{J}
 \end{equation}
 
 \subsubsection{Refinement Context}
 
-% TODO: Move \mathbf{p} from here into the \workreport and work-package - it's really not part of the context.
-
-\newcommand*{\cx¬anchorhash}{a}
-\newcommand*{\cx¬anchorpoststate}{s}
-\newcommand*{\cx¬anchoraccoutlog}{b}
-\newcommand*{\cx¬lookupanchorhash}{l}
-\newcommand*{\cx¬lookupanchortime}{t}
-\newcommand*{\cx¬prerequisites}{\mathbf{p}}
-
-A \emph{refinement context}, denoted by the set $\mathbb{X}$, describes the context of the chain at the point that the report's corresponding work-package was evaluated. It identifies two historical blocks, the \emph{anchor}, header hash $a$ along with its associated posterior state-root $s$ and accumulation output log $b$; and the \emph{lookup-anchor}, header hash $l$ and of timeslot $t$. Finally, it identifies the hash of any prerequisite work-packages $\mathbf{p}$. Formally:
+A \emph{refinement context}, denoted by the set $\workcontext$, describes the context of the chain at the point that the report's corresponding work-package was evaluated. It identifies two historical blocks, the \emph{anchor}, header hash $\cx¬anchorhash$ along with its associated posterior state-root $\cx¬anchorpoststate$ and accumulation output log super-peak $\cx¬anchoraccoutlog$; and the \emph{lookup-anchor}, header hash $\cx¬lookupanchorhash$ and of timeslot $\cx¬lookupanchortime$. Finally, it identifies the hash of any prerequisite work-packages $\cx¬prerequisites$. Formally:
 \begin{equation}
-  \mathbb{X} \equiv \tuple{\,\begin{alignedat}{5}
+  \workcontext \equiv \tuple{\,\begin{alignedat}{5}
     \isa{\cx¬anchorhash&}{\hash}\,,\;
     \isa{&\cx¬anchorpoststate&}{\hash}\,,\;
     \isa{&\cx¬anchoraccoutlog&}{\hash}\,,\;\\
@@ -94,11 +85,11 @@ We finally come to define a \emph{work-digest}, $\workdigest$, which is the data
       \isa{&\wl¬payloadhash&}{\hash}\,,\;
       \isa{&\wl¬gaslimit&}{\gas}\,,\;
       \isa{&\wl¬result&}{\blob \cup \workerror}\,,\;\\
-      \isa{\wl¬gasused&}{\gas}\,,\; % gas_used: UnsignedGas,
-      \isa{&\wl¬importcount&}{\N}\,,\; % imports: u16,
-      \isa{&\wl¬xtcount&}{\N}\,,\; % extrinsic_count: u16,
-      \isa{&\wl¬xtsize&}{\N}\,,\; % extrinsic_size: u32,
-      \isa{&\wl¬exportcount&}{\N} % exports: u16,
+      \isa{\wl¬gasused&}{\gas}\,,\;
+      \isa{&\wl¬importcount&}{\N}\,,\;
+      \isa{&\wl¬xtcount&}{\N}\,,\;
+      \isa{&\wl¬xtsize&}{\N}\,,\;
+      \isa{&\wl¬exportcount&}{\N}
     \end{alignedat}
   }
 \end{equation}
@@ -133,50 +124,53 @@ In order to ensure fair use of a block's extrinsic space, work-reports are limit
 
 \subsection{Package Availability Assurances}
 
-We first define $\reportspostguarantees$, the intermediate state to be utilized next in section \ref{sec:workreportguarantees} as well as $\mathbf{W}$, the set of available work-reports, which will we utilize later in section \ref{sec:accumulation}. Both require the integration of information from the assurances extrinsic $\xtassurances$.
+We first define $\reportspostguarantees$, the intermediate state to be utilized next in section \ref{sec:workreportguarantees} as well as $\justbecameavailable$, the set of available work-reports, which will we utilize later in section \ref{sec:accumulation}. Both require the integration of information from the assurances extrinsic $\xtassurances$.
 
 \subsubsection{The Assurances Extrinsic}
 The assurances extrinsic is a sequence of \emph{assurance} values, at most one per validator. Each assurance is a sequence of binary values (\ie a bitstring), one per core, together with a signature and the index of the validator who is assuring. A value of $1$ (or $\top$, if interpreted as a Boolean) at any given index implies that the validator assures they are contributing to its availability.\footnote{This is a ``soft'' implication since there is no consequence on-chain if dishonestly reported. For more information on this implication see section \ref{sec:assurance}.} Formally:
 \begin{align}
-  \xtassurances \in \seq{\tuple{\isa{a}{\hash},\,\isa{f}{\bitstring_\corecount},\,\isa{v}{\valindex},\,\isa{s}{\signature}}}_\mathsf{:\valcount}
+  \xtassurances \in \seq{\tuple{
+    \isa{\xa¬anchor}{\hash},\,
+    \isa{\xa¬availabilities}{\bitstring_\corecount},\,
+    \isa{\xa¬assurer}{\valindex},\,
+    \isa{\xa¬signature}{\signature}
+  }}_\mathsf{:\valcount}
 \end{align}
 
 The assurances must all be anchored on the parent and ordered by validator index:
 \begin{align}
-  \forall a &\in \xtassurances : a_a = \H_\¬parent \\
-  \forall i &\in \set{ 1\dots\len{\xtassurances} } : \xtassurances[i - 1]_v < \xtassurances[i]_v
+  \forall a &\in \xtassurances : a_\xa¬anchor = \H_\¬parent \\
+  \forall i &\in \set{ 1 \dots \len{\xtassurances} } : \xtassurances\subb{i - 1}_\xa¬assurer < \xtassurances[i]_\xa¬assurer
 \end{align}
 
 The signature must be one whose public key is that of the validator assuring and whose message is the serialization of the parent hash $\H_\¬parent$ and the aforementioned bitstring:
 \begin{align}
-  &\forall a \in \xtassurances : a_s \in \sig{\activeset[a_v]_\vk¬ed}{\mathsf{X}_A\concat \blake(\se(\H_\¬parent, a_f))} \\
+  &\forall a \in \xtassurances : a_\xa¬signature \in \sig{\activeset\subb{a_\xa¬assurer}_\vk¬ed}{\mathsf{X}_A \concat \blake(\se(\H_\¬parent, a_\xa¬availabilities))} \\
   &\mathsf{X}_A \equiv \token{\$jam\_available}
 \end{align}
 
 A bit may only be set if the corresponding core has a report pending availability on it:
 \begin{equation}
   \forall a \in \xtassurances, c \in \coreindex :
-  \quad a_f[c] \Rightarrow \reportspostjudgement[c] \ne \none
+  \quad a_\xa¬availabilities\subb{c} \Rightarrow \reportspostjudgement\subb{c} \ne \none
 \end{equation}
 
 \subsubsection{Available Reports}
-A work-report is said to become \emph{available} if and only if there are a clear \twothirds super-majority of validators who have marked its core as set within the block's assurance extrinsic. Formally, we define the sequence of newly available work-reports $\mathbf{W}$ as:
+A work-report is said to become \emph{available} if and only if there are a clear \twothirds super-majority of validators who have marked its core as set within the block's assurance extrinsic. Formally, we define the sequence of newly available work-reports $\justbecameavailable$ as:
 \begin{align}\label{eq:availableworkreports}
-  \mathbf{W} &\equiv \sq{\build{
-      \reportspostjudgement[c]_\rs¬workreport
+  \justbecameavailable &\equiv \sq{\build{
+      \reportspostjudgement\subb{c}_\rs¬workreport
     }{
       c \orderedin \coreindex,\;
-      \sum_{a \in \xtassurances}\!a_f[c]\,>\,\twothirds\,\valcount
+      \sum_{a \in \xtassurances}\!a_\xa¬availabilities\subb{c}\,>\,\twothirds\,\valcount
     }}
 \end{align}
 
-% TODO: Rename $\mathbf{W}$ to \mathbf{V} or whatever and `\mathbf{w}` becomes `\reporters` and `\reporters` becomes `\mathbf{G}`. `\mathbf{G}` would become something else.
-
 This value is utilized in the definition of both $\accountspost$ and $\reportspostguarantees$ which we will define presently as equivalent to $\reportspostjudgement$ except for the removal of items which are either now available or have timed out:
 \begin{align}
-  \forall c \in \coreindex: \reportspostguarantees[c] \equiv \begin{cases}
-    \none &\when\reports[c]_\rs¬workreport \in \mathbf{W} \vee \H_\¬timeslot \ge \reportspostjudgement[c]_\rs¬timestamp + \mathsf{U}\\
-    \reportspostjudgement[c] &\otherwise
+  \forall c \in \coreindex: \reportspostguarantees\subb{c} \equiv \begin{cases}
+    \none &\when\reports\subb{c}_\rs¬workreport \in \justbecameavailable \vee \H_\¬timeslot \ge \reportspostjudgement\subb{c}_\rs¬timestamp + \mathsf{U}\\
+    \reportspostjudgement\subb{c} &\otherwise
   \end{cases}
 \end{align}
 
@@ -192,21 +186,24 @@ This value is utilized in the definition of both $\accountspost$ and $\reportspo
 
 \subsection{Guarantor Assignments}\label{sec:coresandvalidators}
 
-Every block, each core has three validators uniquely assigned to guarantee work-reports for it. This is borne out with $\valcount = 1,023$ validators and $\corecount = 341$ cores, since $\nicefrac{\valcount}{\corecount} = 3$. The core index assigned to each of the validators, as well as the validators' Ed25519 keys are denoted by $\mathbf{G}$:
+Every block, each core has three validators uniquely assigned to guarantee work-reports for it. This is borne out with $\valcount = 1,023$ validators and $\corecount = 341$ cores, since $\nicefrac{\valcount}{\corecount} = 3$. The core index assigned to each of the validators, as well as the validators' Ed25519 keys are denoted by $\guarantorassignments$:
 \begin{equation}
-  \mathbf{G} \in \tuple{\seq{\coreindex}_\valcount, \seq{\edkey}_\valcount}
+  \guarantorassignments \in \tuple{\seq{\coreindex}_\valcount, \seq{\edkey}_\valcount}
 \end{equation}
 
 We determine the core to which any given validator is assigned through a shuffle using epochal entropy and a periodic rotation to help guard the security and liveness of the network. We use $\entropy_2$ for the epochal entropy rather than $\entropy_1$ to avoid the possibility of fork-magnification where uncertainty about chain state at the end of an epoch could give rise to two established forks before it naturally resolves.
 
-We define the permute function $P$, the rotation function $R$ and finally the guarantor assignments  $\mathbf{G}$ as follows:
+We define the permute function $P$, the rotation function $R$ and finally the guarantor assignments  $\guarantorassignments$ as follows:
 \begin{align}
-  R(\mathbf{c}, n) &\equiv \sq{\build{ (x + n) \bmod \corecount}{x \orderedin \mathbf{c}}}\\
-  P(e, t) &\equiv R\left(\Ffyshuffle{\sq{\build{\ffrac{\corecount \cdot i}{\valcount}}{i \orderedin \valindex}}, e}, \ffrac{t \bmod \epochlen}{\mathsf{R}}\right)\\
-  \mathbf{G} &\equiv (P(\entropy_2', \thetime'), \Phi(\activeset'))
+  R(\mathbf{c}, n) &\equiv \sq{\build{(x + n) \bmod \corecount}{x \orderedin \mathbf{c}}}\\
+  P(e, t) &\equiv R\left(
+    \Ffyshuffle{\sq{\build{\ffrac{\corecount \cdot i}{\valcount}}{i \orderedin \valindex}}, e},
+    \ffrac{t \bmod \epochlen}{\mathsf{R}}
+  \right)\\
+  \guarantorassignments &\equiv \tup{P(\entropy'_2, \thetime'), \Phi(\activeset')}
 \end{align}
 
-We also define $\mathbf{G}^*$, which is equivalent to the value $\mathbf{G}$ as it would have been under the previous rotation:
+We also define $\guarantorassignmentsunderlastrotation$, which is equivalent to the value $\guarantorassignments$ as it would have been under the previous rotation:
 \begin{equation}
   \label{eq:priorassignments}
   \begin{aligned}
@@ -214,7 +211,10 @@ We also define $\mathbf{G}^*$, which is equivalent to the value $\mathbf{G}$ as 
       (\entropy'_2, \activeset') &\when \displaystyle\ffrac{\thetime' - \mathsf{R}}{\epochlen} = \ffrac{\thetime'}{\epochlen}\\
       (\entropy'_3, \previousset') &\otherwise
     \end{cases} \\
-    \mathbf{G}^* &\equiv (P(e, \thetime' - \mathsf{R}), \Phi(\mathbf{k}))
+    \guarantorassignmentsunderlastrotation &\equiv \tup{
+      P(e, \thetime' - \mathsf{R}),
+      \Phi(\mathbf{k})
+    }
   \end{aligned}
 \end{equation}
 
@@ -248,21 +248,21 @@ The credential is a sequence of two or three tuples of a unique validator index 
   \forall g &\in \xtguarantees : g_\xg¬credential = \orderuniqby{v}{\tup{v, s} \in g_\xg¬credential}
 \end{align}
 
-The signature must be one whose public key is that of the validator identified in the credential, and whose message is the serialization of the hash of the work-report. The signing validators must be assigned to the core in question in either this block $\mathbf{G}$ if the timeslot for the guarantee is in the same rotation as this block's timeslot, or in the most recent previous set of assignments, $\mathbf{G}^*$:
+The signature must be one whose public key is that of the validator identified in the credential, and whose message is the serialization of the hash of the work-report. The signing validators must be assigned to the core in question in either this block $\guarantorassignments$ if the timeslot for the guarantee is in the same rotation as this block's timeslot, or in the most recent previous set of assignments, $\guarantorassignmentsunderlastrotation$:
 \begin{align}\label{eq:guarantorsig}
   &\begin{aligned}
     &\begin{aligned}
       \forall \tup{\xg¬workreport, \xg¬timeslot, \xg¬credential} &\in \xtguarantees,\\
-      \forall (v, s) &\in \xg¬credential
+      \forall \tup{v, s} &\in \xg¬credential
     \end{aligned}
       : \abracegroup[\,]{
         &s \in \sig{(\mathbf{k}\sub{v})_\vk¬ed}{\mathsf{X}_G\concat\blake(w)}\\
         &\mathbf{c}\sub{v} = w_\wr¬core \wedge \mathsf{R}(\floor{\nicefrac{\thetime'}{\mathsf{R}}} - 1) \le t \le \thetime'\\
       }\\
-      &k \in \reporters \Leftrightarrow \exists \tup{\xg¬workreport, \xg¬timeslot, \xg¬credential} \in \xtguarantees, \exists (v, s) \in \xg¬credential: k = (\mathbf{k}\sub{v})_\vk¬ed\\
-      &\quad\where (\mathbf{c}, \mathbf{k}) = \begin{cases}
-        \mathbf{G} &\when \displaystyle \ffrac{\thetime'}{\mathsf{R}} = \ffrac{t}{\mathsf{R}} \\
-        \mathbf{G}^* &\otherwise
+      &k \in \reporters \Leftrightarrow \exists \tup{\xg¬workreport, \xg¬timeslot, \xg¬credential} \in \xtguarantees, \exists \tup{v, s} \in \xg¬credential: k = (\mathbf{k}\sub{v})_\vk¬ed\\
+      &\quad\where \tup{\mathbf{c}, \mathbf{k}} = \begin{cases}
+        \guarantorassignments &\when \displaystyle \ffrac{\thetime'}{\mathsf{R}} = \ffrac{t}{\mathsf{R}} \\
+        \guarantorassignmentsunderlastrotation &\otherwise
       \end{cases}
   \end{aligned}\\
   &\mathsf{X}_G \equiv \token{\$jam\_guarantee}
@@ -270,22 +270,26 @@ The signature must be one whose public key is that of the validator identified i
 
 We note that the Ed25519 key of each validator whose signature is in a credential is placed in the \emph{reporters} set $\reporters$. This is utilized by the validator activity statistics bookkeeping system section \ref{sec:bookkeeping}.
 
-We denote $\mathbf{w}$ to be the set of work-reports in the present extrinsic $\mathbf{E}$:
+\newcommand*{\incomingreports}{\mathbf{w}}
+\newcommand*{\incomingcontexts}{\mathbf{x}}
+\newcommand*{\incomingpackagehashes}{\mathbf{p}}
+
+We denote $\incomingreports$ to be the set of work-reports in the present extrinsic $\mathbf{E}$:
 \begin{align}\label{eq:incomingworkreports}
-  \text{let}\ \mathbf{w} = \set{ g_\xg¬workreport \mid g \in \xtguarantees }
+  \using\incomingreports = \set{ \build { g_\xg¬workreport }{ g \in \xtguarantees } }
 \end{align}
 
 No reports may be placed on cores with a report pending availability on it. A report is valid only if the authorizer hash is present in the authorizer pool of the core on which the work is reported. Formally:
 \begin{equation}\label{eq:reportcoresareunusedortimedout}
-  \forall w \in \mathbf{w} :
-    \reportspostguarantees[w_\wr¬core] = \none \wedge w_\wr¬authorizer \in \authpool_{w_\wr¬core}
+  \forall w \in \incomingreports :
+    \reportspostguarantees\subb{w_\wr¬core} = \none \wedge w_\wr¬authorizer \in \authpool_{w_\wr¬core}
 \end{equation}
 
 We require that the gas allotted for accumulation of each work-digest in each work-report respects its service's minimum gas requirements. We also require that all work-reports' total allotted accumulation gas is no greater than the overall gas limit $\mathsf{G}_A$:
 \begin{equation}
-  \forall w \in \mathbf{w}:
+  \forall w \in \incomingreports:
     \sum_{r \in w_\wr¬digests}\!(r_\wl¬gaslimit) \le \mathsf{G}_A \ \wedge \ 
-    \forall r \in w_\wr¬digests: r_\wl¬gaslimit \ge \accounts[r_\wl¬service]_\sa¬minaccgas
+    \forall r \in w_\wr¬digests: r_\wl¬gaslimit \ge \accounts\subb{r_\wl¬service}_\sa¬minaccgas
 \end{equation}
 
 
@@ -301,62 +305,79 @@ We require that the gas allotted for accumulation of each work-digest in each wo
 
 \subsubsection{Contextual Validity of Reports}\label{sec:contextualvalidity}
 
-For convenience, we define two equivalences $\mathbf{x}$ and $\mathbf{p}$ to be, respectively, the set of all contexts and work-package hashes within the extrinsic:
+For convenience, we define two equivalences $\incomingcontexts$ and $\incomingpackagehashes$ to be, respectively, the set of all contexts and work-package hashes within the extrinsic:
 \begin{equation}
-    \using \mathbf{x} \equiv \set{ w_x \mid w \in \mathbf{w} }\ ,\quad
-    \mathbf{p} \equiv \set{ (w_s)_h \mid w \in \mathbf{w} }
+    \using \incomingcontexts \equiv \set{ \build { w_\wr¬context }{ w \in \incomingreports } }\ ,\quad
+    \incomingpackagehashes \equiv \set{ \build { (w_\wr¬avspec)_\as¬packagehash }{ w \in \incomingreports } }
 \end{equation}
 
-There must be no duplicate work-package hashes (\ie two work-reports of the same package). Therefore, we require the cardinality of $\mathbf{p}$ to be the length of the work-report sequence $\mathbf{w}$:
+There must be no duplicate work-package hashes (\ie two work-reports of the same package). Therefore, we require the cardinality of $\incomingpackagehashes$ to be the length of the work-report sequence $\incomingreports$:
 \begin{equation}
-  \len{\mathbf{p}} = \len{\mathbf{w}}
+  \len{\incomingpackagehashes} = \len{\incomingreports}
 \end{equation}
 
-We require that the anchor block be within the last $\mathsf{H}$ blocks and that its details be correct by ensuring that it appears within our most recent blocks $\recenthistory^\dagger$:
+We require that the anchor block be within the last $\mathsf{H}$ blocks and that its details be correct by ensuring that it appears within our most recent blocks $\recenthistorypostparentstaterootupdate$:
 \begin{align}
-  \forall x \in \mathbf{x} : \exists y \in \recenthistory^\dagger : x_a = y_h \wedge x_s = y_s \wedge x_b = y_b\!\!\!\!\!\!
+  \forall x \in \incomingcontexts : \exists y \in \recenthistorypostparentstaterootupdate : x_\cx¬anchorhash = y_\rh¬headerhash \wedge x_\cx¬anchorpoststate = y_\rh¬stateroot \wedge x_\cx¬anchoraccoutlog = y_\rh¬accoutlogsuperpeak \!\!\!\!\!\!
 \end{align}
 
 We require that each lookup-anchor block be within the last $\mathsf{L}$ timeslots:
 \begin{align}
-  \forall x \in \mathbf{x} :\ x_t \ge \H_\¬timeslot - \mathsf{L}
+  \forall x \in \incomingcontexts :\ x_\cx¬lookupanchortime \ge \H_\¬timeslot - \mathsf{L}
 \end{align}
 
 We also require that we have a record of it; this is one of the few conditions which cannot be checked purely with on-chain state and must be checked by virtue of retaining the series of the last $\mathsf{L}$ headers as the ancestor set $\ancestors$. Since it is determined through the header chain, it is still deterministic and calculable. Formally:
 \begin{align}
-  \forall x \in \mathbf{x} :\ \exists h \in \ancestors: h_t = x_t \wedge \blake(h) = x_l
+  \forall x \in \incomingcontexts :\ \exists h \in \ancestors: h_\¬timeslot = x_\cx¬lookupanchortime \wedge \blake(h) = x_\cx¬lookupanchorhash
 \end{align}
 
 We require that the work-package of the report not be the work-package of some other report made in the past. We ensure that the work-package not appear anywhere within our pipeline. Formally:
 \begin{align}
   &\using \mathbf{q} = \set{\build{
-      (w_x)_p
+      (w_\wr¬avspec)_\as¬packagehash
     }{
-      \mathbf{q} \in \ready, (w, \mathbf{d}) \in \mathbf{q}
+      \mathbf{r} \in \ready, \tup{w, \mathbf{d}} \in \mathbf{r}
     }} \\
-  &\using \mathbf{a} = \set{\build{((i_\rs¬workreport)_x)_p}{i \in \reports, i \ne \none}}\\
-  &\forall p \in \mathbf{p}, p \not\in \bigcup_{x \in \recenthistory}\Fkeys{x_\mathbf{p}} \cup \bigcup_{x \in \accumulated}x \cup \mathbf{q} \cup \mathbf{a}
+  &\using \mathbf{a} = \set{\build{
+      ((i_\rs¬workreport)_\wr¬avspec)_\as¬packagehash
+    }{
+      i \in \reports, i \ne \none
+    }} \\
+  &\forall p \in \incomingpackagehashes,
+    p \not\in \bigcup_{x \in \recenthistory}\Fkeys{x_\rh¬reportedpackagehashes}
+      \cup
+      \bigcup_{x \in \accumulated}x
+      \cup \mathbf{q}
+      \cup \mathbf{a}
 \end{align}
 
 We require that the prerequisite work-packages, if present, and any work-packages mentioned in the segment-root lookup, be either in the extrinsic or in our recent history.
 \begin{align}
   &\begin{aligned}
-    &\forall w \in \mathbf{w}, \forall p \in (w_\wr¬context)_\cx¬prerequisites \cup \Fkeys{w_\mathbf{l}} :\\
-    &\quad p \in \mathbf{p} \cup \set{ x \mid x \in \Fkeys{b_\mathbf{p}} ,\, b \in \recenthistory }
+    &\forall w \in \incomingreports, \forall p \in (w_\wr¬context)_\cx¬prerequisites \cup \Fkeys{w_\wr¬srlookup} :\\
+    &\quad p \in \incomingpackagehashes \cup \set{ \build { x }{ x \in \Fkeys{b_\rh¬reportedpackagehashes} ,\, b \in \recenthistory } }
   \end{aligned}
 \end{align}
 
 We require that any segment roots mentioned in the segment-root lookup be verified as correct based on our recent work-package history and the present block:
 \begin{align}
-  &\using \mathbf{p} = \set{ ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash \mapsto ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot \mid g \in \xtguarantees } \\
-  &\forall w \in \mathbf{w}: w_\mathbf{l} \subseteq \mathbf{p} \cup \bigcup_{b \in \recenthistory} b_\mathbf{p}
+  &\using \incomingpackagehashes = \set{ \build {
+    \kv{
+      ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash
+    }{
+      ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot
+    }
+  }{
+    g \in \xtguarantees
+  } } \\
+  &\forall w \in \incomingreports: w_\wr¬srlookup \subseteq \incomingpackagehashes \cup \bigcup_{b \in \recenthistory} b_\rh¬reportedpackagehashes
 \end{align}
 
 (Note that these checks leave open the possibility of accepting work-reports in apparent dependency loops. We do not consider this a problem: the pre-accumulation stage effectively guarantees that accumulation never happens in these cases and the reports are simply ignored.)
 
 Finally, we require that all work-digests within the extrinsic predicted the correct code hash for their corresponding service:
 \begin{align}\label{eq:reportcodesarecorrect}
-  \forall w \in \mathbf{w}, \forall r \in w_\wr¬digests : r_\wl¬codehash = \accounts[r_\wl¬service]_\sa¬codehash
+  \forall w \in \incomingreports, \forall r \in w_\wr¬digests : r_\wl¬codehash = \accounts\subb{r_\wl¬service}_\sa¬codehash
 \end{align}
 
 
@@ -371,10 +392,10 @@ Finally, we require that all work-digests within the extrinsic predicted the cor
 
 We define $\reportspostassurances$ as being equivalent to $\reportspostguarantees$, except where the extrinsic replaced an entry. In the case an entry is replaced, the new value includes the present time $\thetime'$ allowing for the value to be replaced without respect to its availability once sufficient time has elapsed (see equation \ref{eq:reportcoresareunusedortimedout}).
 \begin{equation}
-    \forall c \in \coreindex : \reportspostassurances[c] \equiv \begin{cases}
+    \forall c \in \coreindex : \reportspostassurances\subb{c} \equiv \begin{cases}
       \tup{\¬workreport,\,\is{\rs¬timestamp}{\thetime'}} &\when \exists \tup{\¬workreport,\,\xg¬timeslot,\,\xg¬credential} \in \xtguarantees, \¬workreport_\wr¬core = c \\
-      \reportspostguarantees[c] &\otherwise
+      \reportspostguarantees\subb{c} &\otherwise
     \end{cases}
 \end{equation}
 
-This concludes the section on reporting and assurance. We now have a complete definition of $\reportspostassurances$ together with $\mathbf{W}$ to be utilized in section \ref{sec:accumulation}, describing the portion of the state transition happening once a work-report is guaranteed and made available.
+This concludes the section on reporting and assurance. We now have a complete definition of $\reportspostassurances$ together with $\justbecameavailable$ to be utilized in section \ref{sec:accumulation}, describing the portion of the state transition happening once a work-report is guaranteed and made available.
